# voxel-based-raytracing-engine

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json  imgui.ini
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  main.cpp
android/app/src/main/java/com/example/test_android/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
arc_engine/: .gitmodules  CMakeLists.txt
arc_engine/engine/: CMakeLists.txt
arc_engine/engine/core/: CMakeLists.txt
arc_engine/engine/core/include/: application.h  core.h  engine.h  event_handler.h  input.h  keys.h  window.h
arc_engine/engine/core/src/: engine.cpp  window.cpp
arc_engine/engine/imgui/: CMakeLists.txt
arc_engine/engine/imgui/include/: imgui_layer.h
arc_engine/engine/imgui/src/: imgui_layer.cpp
arc_engine/engine/include/: engine_includes.h
arc_engine/engine/junk/OpenGL_3/: opengl3_buffer.cpp  opengl3_buffer.h  opengl3_context.cpp  opengl3_context.h  opengl3_renderer_api.cpp  opengl3_renderer_api.h  opengl3_shader.cpp  opengl3_shader.h  opengl3_vertex_array.cpp  opengl3_vertex_array.h
arc_engine/engine/log/: CMakeLists.txt
arc_engine/engine/log/src/: log.cpp
arc_engine/engine/renderer/: CMakeLists.txt
arc_engine/engine/renderer/include/: batch_renderer.h  buffer.h  font.h  font_renderer.h  graphics_context.h  perspective_camera.h  renderer_api.h  shader.h  shadow_texture.h  structs.h  texture.h  vertex_array.h  voxel_model.h  voxel_renderer.h
arc_engine/engine/renderer/platform/opengl/: CMakeLists.txt
arc_engine/engine/renderer/platform/opengl/include/: frame_buffer.h  opengl_context.h  opengl_context_sdl.h  opengl_font.h  opengl_renderer_api.h  opengl_shader.h  opengl_texture.h  opengl_vertex_array.h
arc_engine/engine/renderer/platform/opengl/src/: frame_buffer.cpp  opengl_context.cpp  opengl_font.cpp  opengl_renderer_api.cpp  opengl_shader.cpp  opengl_texture.cpp  opengl_vertex_array.cpp
arc_engine/engine/renderer/src/: batch_renderer.cpp  buffer.cpp  font.cpp  graphics_context.cpp  orthographic_camera.cpp  perspective_camera.cpp  renderer_api.cpp  shader.cpp  shadow_texture.cpp  texture.cpp  vertex_array.cpp  voxel_model.cpp  voxel_renderer.cpp
arc_engine/engine/shaders/2d_shader/: opengl.glsl
arc_engine/engine/shaders/text_shader/: opengles.glsl
arc_engine/engine/shaders/voxel_shader/: opengl.glsl
core/: CMakeLists.txt
core/assets/: walterwhite.vox  waterfall.vox
core/assets/Bottom/: bottom-jeans.vox  bottom-ragged jeans.vox
core/assets/Hats/: hats-black hair side.vox  hats-blonde hair side.vox  hats-brown fedora.vox  hats-brown hair side.vox  hats-halo.vox
core/assets/Mouth/: mouth-cigarette.vox  mouth-pipe.vox  mouth-vape.vox
core/assets/Shoes/: shoes-red flipflops.vox  shoes-white sneakers.vox
core/assets/Skins/: skin-alien-1.vox  skin-alien-2.vox  skin-alien-3.vox  skin-avatar-1.vox  skin-human-1.vox  skin-human-2.vox  skin-human-3.vox  skin-human-4.vox  skin-human-5.vox  skin-human-6.vox  skin-human-7.vox  skin-zombie-1.vox  skin-zombie-2.vox  skin-zombie-3.vox
core/assets/Top/: top-long white shirt.vox  top-short white shirt.vox  top-tuxedo red tie closed.vox  top-tuxedo red tie.vox  top-tuxedo.vox
core/include/: camera_controller.h  func.h  game.h  renderer_system.h
core/src/: camera_controller.cpp  func.cpp  game.cpp  renderer_system.cpp
desktop/: main.cpp
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/: buttons.h  engine.h  functions.h  listeners.h  window.h
engine/core/src/: engine.cpp  event_handler.cpp  input.cpp  window.cpp
engine/log/include/: log.h
engine/log/src/: log.cpp
engine/renderer/: CMakeLists.txt
engine/renderer/abstraction/: CMakeLists.txt
engine/renderer/abstraction/include/: buffer.h  frame_buffer.h  graphics_context.h  opengl_func.h  renderer_api.h  shader.h  texture.h  vertex_array.h
engine/renderer/abstraction/src/: buffer.cpp  frame_buffer.cpp  graphics_context.cpp  renderer_api.cpp  shader.cpp  texture.cpp  vertex_array.cpp
engine/renderer/include/: batch_renderer.h  orthographic_camera.h  overlay_renderer.h  perspective_camera.h  shadow_texture.h  structs.h  voxel_model.h  voxel_renderer.h
engine/renderer/src/: batch_renderer.cpp  overlay_renderer.cpp  perspective_camera.cpp  shadow_texture.cpp  voxel_model.cpp  voxel_renderer.cpp
engine/scene/: CMakeLists.txt  project-meta-info.in
engine/scene/include/: components.h  entity.h  scene.h
engine/scene/src/: scene.cpp
engine/shaders/2d_shader/: opengles.glsl
engine/shaders/bilateral_shader/: opengl.glsl
engine/shaders/blurr_shader/: opengl.glsl
engine/shaders/combine_AO_shader/: opengl.glsl
engine/shaders/combine_light_shader/: opengl.glsl
engine/shaders/combine_shader/: opengl.glsl
engine/shaders/copy_shader/: opengl.glsl
engine/shaders/diffuse_filter/: opengl.glsl
engine/shaders/fake_median_shader/: opengl.glsl
engine/shaders/fsaa_shader/: opengl.glsl
engine/shaders/gauss_shader/: opengl.glsl
engine/shaders/median_shader/: opengl.glsl
engine/shaders/reverse_shader/: opengl.glsl
engine/shaders/soft_shadow_shader/: opengl.glsl
engine/shaders/temporal_shader/: opengl.glsl
engine/shaders/texture_shader/: opengl.glsl
engine/shaders/tracing_shader/: opengl.glsl
engine/shaders/voxel_shader/: opengl.glsl  opengl3.glsl
engine/shaders/voxel_shadow_shader/: opengl.glsl
